[metadata]
name = sample-package
version = '1.0'
auther = Keita Mizushima
auther_email = oxkeita@gmail.com
description = sample repogitory of python
description-file = file: README.md
url = http://example.com
license = MIT
license_file = LICENSE

[options]
install_requires=
packages = find:

[flake8]
show_source = True
max-line-length=140
max-complexity=15

[tool:pytest]
env =
    NAS_LIMIT = 30
    SLACK_BOT_USER_ACCESS_TOKEN = sample_bot_token
    SLACK_OAUTH_ACCESS_TOKEN = sample_oauth_token
